--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceso Denegado</title>
+    <title>Google Sign In</title>
 </head>
+
 <body>
-    <h1>Acceso Denegado</h1>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="./js/index.js"></script>
+    <h1>Google Sign-In</h1>
+    <hr />
+    <div id="g_id_onload" data-client_id="484198187477-i6oajeu3bv273hdl1jphbjosk87imfpp.apps.googleusercontent.com"
+        data-auto_prompt="false"
+        data-callback="handleCredentialResponse">
+    </div>
+    <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
+        data-shape="rectangular" data-logo_alignment="left">
+    </div>
+    <button id="googleSignOut">
+        SignOut
+    </button>
 </body>
+
 </html>
